--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
         android:columnCount="4"
-        android:padding="16dp"
+        android:padding="20dp"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,19 +82,27 @@
         <Button
             android:id="@+id/acButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="AC" />
         <Button
             android:id="@+id/plusMinusButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="±" />
         <Button
             android:id="@+id/percentageButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="%" />
 
         <Button
             android:id="@+id/divideButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="/"
             android:textColor="#FFC107" />
 
@@ -101,39 +110,55 @@
         <Button
             android:id="@+id/sevenButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="7" />
         <Button
             android:id="@+id/eightButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="8" />
         <Button
             android:id="@+id/nineButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="9" />
 
         <Button
             android:id="@+id/multiplyButton"
             style="@style/CalculatorButtonStyle"
             android:text="*"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:textColor="#FFC107" />
 
         <!-- Third row of buttons -->
         <Button
             android:id="@+id/fourButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="4" />
         <Button
             android:id="@+id/fiveButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="5" />
         <Button
             android:id="@+id/sixButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="6" />
 
         <Button
             android:id="@+id/minusButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="-"
             android:textColor="#FFC107" />
 
@@ -141,19 +166,27 @@
         <Button
             android:id="@+id/oneButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="1" />
         <Button
             android:id="@+id/twoButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="2" />
         <Button
             android:id="@+id/threeButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="3" />
 
         <Button
             android:id="@+id/plusButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="+"
             android:textColor="#FFC107" />
 
@@ -161,22 +194,30 @@
         <Button
             android:id="@+id/zeroButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="0" />
 
         <Button
             android:id="@+id/decimalButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="." />
 
         <ImageButton
             android:layout_height="70dp"
             android:id="@+id/backSpaceButton"
             android:src="@drawable/baseline_backspace_24"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             style="@style/CalculatorButtonStyle" />
 
         <Button
             android:id="@+id/equalsButton"
             style="@style/CalculatorButtonStyle"
+            android:background="@drawable/bg_buttons"
+            android:layout_margin="8dp"
             android:text="=" />
 
     </GridLayout>
